# ChangeLog for www-client/kazehakase
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/kazehakase/Attic/ChangeLog,v 1.58 2008/03/14 17:31:10 armin76 Exp $

  14 Mar 2008; Raúl Porcel <armin76@gentoo.org> kazehakase-0.5.0.ebuild,
  kazehakase-0.5.1.ebuild, kazehakase-0.5.2.ebuild, kazehakase-0.5.3.ebuild:
  Fix deps on =net-libs/xulrunner-1.8* and =www-client/mozilla-firefox-2.0*
  wrt #213296

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Masatomo Nakano (nakano, #200340) from metadata.xml.

*kazehakase-0.5.3 (29 Feb 2008)

  29 Feb 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/kazehakase-0.5.3-gcc43.patch, +kazehakase-0.5.3.ebuild:
  Version bumped.
  Fixed gcc 4.3 issue, bug #211840.

*kazehakase-0.5.2 (24 Feb 2008)

  24 Feb 2008; MATSUU Takuto <matsuu@gentoo.org> +kazehakase-0.5.2.ebuild:
  Version bumped, bug #210932.

*kazehakase-0.5.1 (31 Dec 2007)

  31 Dec 2007; MATSUU Takuto <matsuu@gentoo.org> -kazehakase-0.4.7.ebuild,
  -kazehakase-0.4.8.ebuild, +kazehakase-0.5.1.ebuild:
  Version bumped.
  Removed old versions.

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  kazehakase-0.5.0.ebuild:
  ppc stable, bug #198983

  15 Nov 2007; Raúl Porcel <armin76@gentoo.org> kazehakase-0.5.0.ebuild:
  sparc stable wrt security #198983

  14 Nov 2007; Alex Howells <astinus@gentoo.org> kazehakase-0.5.0.ebuild:
  stable on amd64, security bug #198983

  14 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  kazehakase-0.5.0.ebuild:
  stable x86, security bug 198983

*kazehakase-0.5.0 (31 Oct 2007)

  31 Oct 2007; <matsuu@gentoo.org> +kazehakase-0.5.0.ebuild:
  Version bumb, bug #197525.

*kazehakase-0.4.8 (30 Aug 2007)

  30 Aug 2007; MATSUU Takuto <matsuu@gentoo.org> +kazehakase-0.4.8.ebuild:
  Version bumped.

  11 Aug 2007; MATSUU Takuto <matsuu@gentoo.org> -kazehakase-0.3.9.ebuild,
  -kazehakase-0.4.6.ebuild: