@@ -3,9 +3,11 @@ DIST kazehakase-0.5.0.tar.gz 1369196 RMD160 32fc4561c11ce39e301dd64897c9dc09e764
 DIST kazehakase-0.5.1.tar.gz 1369134 RMD160 58614929f4a849847a7a63e976746eaeedb58bd1 SHA1 08d818f19e96ef24b34271f11cf37bbe50ac8f85 SHA256 8e8718a899574aad5686e134615c1e1da25aa224a5976039bbbd0c791d69bddd
 DIST kazehakase-0.5.2.tar.gz 1374906 RMD160 0869c332febda07429babbbdaa82060365663413 SHA1 8e06fad595deebac911f0b28824329b816442837 SHA256 f9cc6f3d09aa5e8f8cdece888808819987e3e091400d20424d3cd6dfeeff69df
 DIST kazehakase-0.5.3.tar.gz 1400187 RMD160 e39a4e1bd9d00dd302735254cb0dddf4826bb8a9 SHA1 d516a80817ab04f27e860fd2a20974cc68fa978c SHA256 bbf76a6af4347bfeb2c93557d52a4919e52b67cbe335b33e10f14208d8b067e9
+DIST kazehakase-0.5.4.tar.gz 1403194 RMD160 85f41a395e01d6b11c3c24f3d8ca576be205d308 SHA1 0edb089c8af3ec04bf1a2c9ba107096a79d8c014 SHA256 ce6ae61832d83242b298721be62fcfa61a046d8c16a00c2d224c9169fae51416
 EBUILD kazehakase-0.5.0.ebuild 1267 RMD160 f4dc8fce0164c5c83d9b8291a57d99dff7add91d SHA1 56d94cef173a54fadc4fac3127d32db90fad9800 SHA256 cf013614df466becc1d80f290c58cf65c7f6a603429b1c001b0e501dd124842c
 EBUILD kazehakase-0.5.1.ebuild 1271 RMD160 ea275f6da4fbb3047bc7dc9c5e07e99ccff4aad6 SHA1 15fe5892b2a77cab9b6b0f192cea86caa401e4a4 SHA256 e7377e55d85808fcf654f1e461d46ba91ab03d86c4a37034c942b45ba8be6df3
 EBUILD kazehakase-0.5.2.ebuild 1271 RMD160 60b31820827c694d08169804b38a578a2171831d SHA1 84d670cc3348e56a4b28834c71c66ceb9daa9e2f SHA256 5fff16d8dc9f74c839872c9dbb24c305f9d3fc17442f779e37c6220162fcf4e1
 EBUILD kazehakase-0.5.3.ebuild 1398 RMD160 8806fdf8770cac987034ef0675fcb94a2e9a361f SHA1 2053141036fde1b8edfd5588f93695ca9fed03da SHA256 93ade3ad5dace5aa8fc49ac62b84feaf718ed59056b8ef243f83c9e37256d4f5
-MISC ChangeLog 14545 RMD160 ea68f911ab05b3aa775b9a488aae121166240533 SHA1 10e53ddc4a50ebaad086eb841b3c4af8d1b62f4d SHA256 66064ab4d5f3feec5f2f4a77599797ea29e50aca5e6a6a4a6aa733d210af0515
+EBUILD kazehakase-0.5.4.ebuild 1296 RMD160 83ac9d5e818bbf745631f526afa497aca19df0c0 SHA1 ea05c37f289a80190111341d3c65287cd77fa4c4 SHA256 487f7c93cc82a5c09762578fb1bec7bb506bd0813dbd47f3e024b555221256ec
+MISC ChangeLog 14671 RMD160 f20d3f38a297d547dada8cdcf438c50c3ee03d29 SHA1 378c12d0d171a2d0b5f4a4fc9548d50cb6f2136b SHA256 d5f9f27ac18fc4a96725998f0eaeeae86fee2d80b56e1f180c26c6de7d6a4093
 MISC metadata.xml 225 RMD160 e843fe8aaaf9a7765b818e2e3de970d594d77883 SHA1 19261fc71e38ae45c078593bd5bc448882876fbd SHA256 3add26a9fe16363ce3cdab0f950c5a2e3fd72363d11a90632f62361b4885ecca
