@@ -1,6 +1,11 @@
 # ChangeLog for www-client/kazehakase
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/kazehakase/Attic/ChangeLog,v 1.58 2008/03/14 17:31:10 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/kazehakase/Attic/ChangeLog,v 1.59 2008/04/03 17:00:21 matsuu Exp $
+
+*kazehakase-0.5.4 (03 Apr 2008)
+
+  03 Apr 2008; MATSUU Takuto <matsuu@gentoo.org> +kazehakase-0.5.4.ebuild:
+  Version bumped.
 
   14 Mar 2008; Raúl Porcel <armin76@gentoo.org> kazehakase-0.5.0.ebuild,
   kazehakase-0.5.1.ebuild, kazehakase-0.5.2.ebuild, kazehakase-0.5.3.ebuild:
